css/projects.css
.content {
	margin-left: 10%;
	margin-right: 10%;
	padding-top: 100px;
	width: 80%;
	height: 100%;
}

.projects-index {
	padding-top: 100px;
	width: 100%;
	height: 100%;
}

.projects-index p {
  float: right;
	margin-right: 50px;
	position: relative;
}

.box {
	height: 200px;
	width: 100%;
}

.box img {
	height: 100%;
	width: auto;
}

.box img:hover {
	opacity: 0.8;
}

.box p {
	line-height: 200px;
}

#projects-cinepath {
  background-color: #fa285a;
}

#projects-dropper {
	background-color: #33cccc;
}

#projects-old-school {
	background-color: #445BB9;
}

#projects-p5js {
	background-color: #f09696;
}

